# route256-problems

./: .meta.yaml  .pre-commit-config.yaml  pyproject.toml
2023-main-round/: solution.py
2024-practice-round/F/test_data/: 1  10  11  12  13  14  15  3  4  6  7  8  9
2024-practice-round/G/test_data/: 16  17  18  19  20
2024-practice-round/J/test_data/: 16  17  18  19  20  21  22  23  24  25
